[package]
name = "geo-proc"
version = "0.1.0"
authors = ["Asger Nyman Christiansen <asgernyman@gmail.com>"]
edition = "2018"

[dependencies]
#tri-mesh = { git = "https://github.com/asny/tri-mesh", branch = "development" }
tri-mesh = "0.3.0"
tobj = "0.1.6"
wavefront_obj = "5.1.0"

[dev-dependencies]
dust = { git = "https://github.com/asny/Dust" }
serde_json = "1.0.33"